removed weather
